--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
+# Ignore Python build artifacts.
 
-# Created by https://www.gitignore.io/api/python
+MANIFEST
+build/
+dist/
+*.egg-info/
+*.pyc
+*.pyo
+.eggs/
+
+# Test generated
+.tox/
+
+# Ignore pyenv files.
+
+.python-version
+
+
+# Ignore virtualenv environments.
+
+.venv*/
+
+
+# Ignore Vagrant runtime files.
+
+.vagrant/
+
+
 # Ignore settings for various IDEs.
 
 .idea/
@@ -9,112 +35,7 @@
 nbproject/
 *.code-workspace
 
-### Python ###
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-MANIFEST
-*.egg-info/
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-.installed.cfg
-*.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-.pytest_cache/
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-
-# Translations
-*.mo
-*.pot
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule.*
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-.python-version
-.venv*/
-.vagrant/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
 
 # Ignore OS metadata files.
 
 .DS_Store
-
-# End of https://www.gitignore.io/api/python
